--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,10 +6,150 @@
   font-family: "Roboto", sans-serif;
 }
 
-body {
-  height: 100vh;
-  background: #F2C6A0;
+header {
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  top: 0;
+  right: 0;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 2% 2%;
+  background: #ffffff;
+  z-index: 1;
+}
+
+header .logo img {
+  max-width: 280px;
+  height: auto;
+  cursor: pointer;
+}
+
+header .nav-menu {
+  display: flex;
+}
+
+header .nav-menu li {
+  list-style: none;
+}
+
+header .nav-menu li a {
+  position: relative;
+  color: #2F3645;
+  font-size: 1.6rem;
+  text-transform: capitalize;
+  text-decoration: none;
+  padding: 10px 20px;
+  font-weight: 500;
+  transition: all .42s ease;
+  opacity: .8;
+}
+
+header .nav-menu li a:hover {
+  opacity: 1;
+}
+
+header .nav-icon {
+  display: flex;
+  align-items: center;
+}
+
+header .nav-icon i {
+  margin-right: 20px;
+  color: #2F3645;
+  font-size: 2.5rem;
+  text-transform: all .42s ease;
+}
+
+header .nav-icon i:hover {
+  transform: scale(1.1);
+}
+
+.main-home {
+  padding: 0 40px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-home .main-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin: 5% 0 0;
+}
+
+.main-home .container-image {
+  animation: floating 3s ease-in-out infinite
+}
+
+@keyframes floating {
+  0% { transform: translate(0,  0px); }
+  50%  { transform: translate(0, 15px); }
+  100%   { transform: translate(0, -0px); }    
+}
+
+@media (max-width: 768px) {
+  .nav-menu {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    width: 300px;
+    height: 100vh;
+    background: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 40px 30px;
+    transition: all .42s;
+    border-top-left-radius: 12px;
+  }
+
+  .nav-menu a {
+    display: block;
+    margin: 20px auto;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+  }
+
+  .nav-menu.open {
+    right: 0;
+  }
+
+  .main-home {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .main-home .main-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin: 5% 0 0;
+  }
+
+  .main-home .main-text .h1-text {
+    color: #2F3645;
+  }
+  
+  .main-home .main-text .p-text {
+    color: #2F3645;
+  }
+
+  .main-home .container-image img {
+    display: none;
+  }
+}
+
+body {
+  height: auto;
+  /* background: #E68369; */
+  background: #ffffff;
 }
